add DrawerLyout pagerSlidingTabStrip jianTou

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,7 +45,9 @@
     <string name="tab_2">公告</string>
     <string name="tab_3">寻物</string>
     <string name="tab_4">会话</string>
-    <string name="wonderful_comment">精彩评论</string>   
+    <string name="wonderful_comment">精彩评论</string>
+    <string name="drawer_open">打开</string>
+    <string name="drawer_close">关闭</string>
     
 
 </resources>
