--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="favorite_fail">收藏失败</string>
     <string name="favorite_delete_ok">取消收藏</string>
     <string name="favorite_delete_fail">取消失败</string>
+    <string name="not_network">当前无网络连接</string>
 
 
 </resources>
