--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,6 +99,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="input_comment">我来说两句...</string>
 
 
 </resources>
