--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,9 +48,9 @@
     <string name="wonderful_comment">精彩评论</string>
     <string name="drawer_open">打开</string>
     <string name="drawer_close">关闭</string>
-    <string name="ui_create_speak_content_hint">说点什么...</string>
+    <string name="ui_create_speak_content_hint">说点什么…</string>
 
-    <string name="secret_all_content_tips">查看全文...</string>
+    <string name="secret_all_content_tips">查看全文…</string>
 
     <string name="lll">name="search_image">找图片
     name="search_image_empty_hint">对不起，没有搜索到相关图片
@@ -99,7 +99,22 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="input_comment">我来说两句...</string>
+    <string name="input_comment">我来说两句…</string>
+    <string name="click_refresh">点击重试</string>
+    <string name="about">关于</string>
+    <string name="license">
+        Copyright 2015 chenupt
+        \n\n
+        Licensed under the Apache License, Version 2.0 (the \"License\");
+        you may not use this file except in compliance with the License.
+        You may obtain a copy of the License at
+        \n\n
+        http://www.apache.org/licenses/LICENSE-2.0
+        \n\n
+        Unless required by applicable law or agreed to in writing,
+        software distributed under the License is distributed on an \"AS IS\" BASIS,
+        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+        See the License for the specific language governing permissions and limitations under the License.</string>
 
 
 </resources>
