--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="btn_cancel">取消</string>
     <string name="btn_comment">写评论</string>
     <string name="btn_addfans">加关注</string>
-    <string name="btn_more">正在加载···</string>
+    <string name="loading">正在加载···</string>
     <!-- 菜单文字 -->
     <string name="menu_app_write">写微博</string>
     <string name="menu_app_logout">注销账户</string>
@@ -100,7 +100,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="input_comment">我来说两句…</string>
-    <string name="click_refresh">点击重试</string>
+    <string name="click_refresh">点击加载</string>
     <string name="about">关于</string>
     <string name="license">
         Copyright 2015 chenupt
