--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -124,6 +124,11 @@
     <string name="album">相册</string>
     <string name="server_error">服务器异常</string>
     <string name="msg_login_fail_empno_not_exist">此工号还未注册</string>
+    <string name="discover_secret_header">圈子漫游</string>
+    <string name="all">全部</string>
+    <string name="discover_filter_header">筛选</string>
+    <string name="is_new">最新</string>
+    <string name="is_hot">最热</string>
 
 
 </resources>
