UiZhangBen.java add export

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,6 +129,7 @@
     <string name="discover_filter_header">筛选</string>
     <string name="is_new">最新</string>
     <string name="is_hot">最热</string>
+    <string name="ji_zhang_ben">记账本</string>
 
 
 </resources>
