--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -139,6 +139,8 @@
     <string name="month">月</string>
     <string name="day">日</string>
     <string name="select_time">选择时间</string>
+    <string name="select_location">选择地点</string>
+    <string name="please_select_category">请选择支出类别！</string>
 
 
 </resources>
