--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="select_time">选择时间</string>
     <string name="select_location">选择地点</string>
     <string name="please_select_category">请选择支出类别！</string>
+    <string name="please_input_money">请输入金额！</string>
 
 
 </resources>
