--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="camera">拍照</string>
     <string name="get_pic_from_photo">从相册选取</string>
     <string name="cancel">取消</string>
+    <string name="ok">确定</string>
     <string name="album">相册</string>
     <string name="server_error">服务器异常</string>
     <string name="msg_login_fail_empno_not_exist">此工号还未注册</string>
@@ -152,6 +153,10 @@
     <string name="add_location">添加地点</string>
     <string name="save_fail">保存失败！请稍后重试</string>
     <string name="location_name">add_location_name</string>
+    <string name="host_location">热门地点：</string>
+    <string name="please_input_category_name">请输入类别名称</string>
+    <string name="max_support_four_text">最多支持4个字！</string>
+    <string name="category_name_not_null">类别的名称不能为空！</string>
 
 
 </resources>
